namespace FDAAPI.Presentation.FastEndpointBasedApi.Endpoints.Feat11.DTOs
{
    public class SetPasswordResponseDto
    {
        public bool Success { get; set; }
        public string Message { get; set; } = string.Empty;
    }
}
