@startuml FeatG11_AuthSetPassword_ClassDiagram
!define RECTANGLE class

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam packageBackgroundColor #E8E8E8
skinparam packageBorderColor #666666
skinparam stereotypeCBackgroundColor #ADD1B2
skinparam arrowColor #333333

title FeatG11_AuthSetPassword - Class Diagram\n(Domain-Centric Architecture + CQRS Pattern)

' ============================================
' PRESENTATION LAYER
' ============================================
package "PRESENTATION LAYER" #E1D5E7 {
  class SetPasswordEndpoint <<Endpoint>> {
    - _mediator: IMediator
    --
    + Configure(): void
    + HandleAsync(req: SetPasswordRequestDto, ct: CancellationToken): Task
  }

  class SetPasswordRequestDto <<DTO>> {
    + Email: string?
    + NewPassword: string
    + ConfirmPassword: string
  }

  class SetPasswordResponseDto <<DTO>> {
    + Success: bool
    + Message: string
  }

  SetPasswordEndpoint --> SetPasswordRequestDto : uses
  SetPasswordEndpoint --> SetPasswordResponseDto : returns
}

' ============================================
' APPLICATION LAYER
' ============================================
package "APPLICATION LAYER" #D5E8D4 {
  class SetPasswordRequest <<Record>> {
    + UserId: Guid
    + Email: string
    + NewPassword: string
    + ConfirmPassword: string
  }

  class SetPasswordResponse <<Response>> {
    + Success: bool
    + Message: string
    + StatusCode: SetPasswordResponseStatusCode
  }

  class SetPasswordHandler <<Handler>> {
    - _userRepository: IUserRepository
    - _passwordHasher: IPasswordHasher
    --
    + Handle(request: SetPasswordRequest, ct): Task<SetPasswordResponse>
    - ValidatePasswordStrength(password: string): (IsValid, ErrorMessage)
    - IsValidEmail(email: string): bool
  }

  class SetPasswordRequestValidator <<Validator>> {
    --
    + SetPasswordRequestValidator()
  }

  interface IRequestHandler {
    + Handle(request, ct): Task<Response>
  }

  enum SetPasswordResponseStatusCode <<Enumeration>> {
    Success
    UserNotFound
    PasswordAlreadyExists
    NewPasswordInvalid
    PasswordMismatch
    EmailInvalid
    EmailAlreadyExists
    UnknownError
  }

  SetPasswordHandler ..|> IRequestHandler : implements
  SetPasswordHandler --> SetPasswordRequest : handles
  SetPasswordHandler --> SetPasswordResponse : returns
  SetPasswordResponse --> SetPasswordResponseStatusCode : contains
  SetPasswordRequestValidator --> SetPasswordRequest : validates
}

' ============================================
' DOMAIN LAYER - Entities
' ============================================
package "DOMAIN LAYER - Entities" #F8CECC {
  class User <<Entity>> {
    + Id: Guid
    + Email: string
    + PasswordHash: string?
    + EmailVerifiedAt: DateTime?
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + UpdatedBy: Guid
  }
}

' ============================================
' DOMAIN LAYER - Repositories
' ============================================
package "DOMAIN LAYER - Repositories" #FFE6CC {
  interface IUserRepository <<Interface>> {
    + GetByIdAsync(userId: Guid, ct): Task<User?>
    + GetByEmailAsync(email: string, ct): Task<User?>
    + UpdateAsync(user: User, ct): Task<bool>
  }
}

' ============================================
' COMMON SERVICES
' ============================================
package "COMMON SERVICES" #E1D5E7 {
  interface IMediator <<Interface>> {
    + Send<TResponse>(request, ct): Task<TResponse>
  }

  interface IPasswordHasher <<Interface>> {
    + HashPassword(password: string): string
  }

  interface IFeatureRequest <<Interface>> { }
  interface IFeatureResponse <<Interface>> { }

  SetPasswordRequest ..|> IFeatureRequest
  SetPasswordResponse ..|> IFeatureResponse
}

' ============================================
' RELATIONSHIPS
' ============================================
SetPasswordEndpoint ..> IMediator : uses
SetPasswordEndpoint ..> SetPasswordRequest : sends

SetPasswordHandler ..> IUserRepository : uses
SetPasswordHandler ..> IPasswordHasher : uses

SetPasswordRequestDto ..> SetPasswordRequest : maps to
SetPasswordResponseDto ..> SetPasswordResponse : maps from

' ============================================
' LEGEND
' ============================================
legend bottom left
  | Color | Layer |
  | #E1D5E7 | Presentation Layer & Common Services |
  | #D5E8D4 | Application Layer |
  | #F8CECC | Domain Entities |
  | #FFE6CC | Domain Repositories |
  | | |
  | Line Style | Meaning |
  | --> | Dependency |
  | ..> | Uses/Sends |
  | ..\|> | Implements |
  | *-- | Composition |
  | | |
  | Note: Requires JWT authentication |
  | Use case: Phone-only users setting first password |
endlegend

@enduml
